5.4/uk/4-methodology.rst
Вибір методології
=================================

Навчання — це повторення певних речей знову і знову. Я не буду цього робити. Обіцяю. В кінці кожного кроку, вам потрібно робити певний трюк, та зберігати вашу роботу. Це як ``Ctrl+S``, але для веб-сайту.

Впровадження стратегії Git
-----------------------------------------------

.. index::
    single: Git;add
    single: Git;commit

В кінці кожного кроку, не забудьте зафіксувати зміни:

.. code-block:: terminal
    :class: ignore

    $ git add .
    $ git commit -m'Add some new feature'

Ви можете безпечно додавати "все що вам потрібно" оскільки Symfony керує файлом ``.gitignore`` за вас. Також кожен пакет може додавати ще конфігурацій. Погляньте на поточний зміст:

.. code-block:: text
    :caption: .gitignore
    :class: ignore
    :emphasize-lines: 1,9

    ###> symfony/framework-bundle ###
    /.env.local
    /.env.local.php
    /.env.*.local
    /config/secrets/prod/prod.decrypt.private.php
    /public/bundles/
    /var/
    /vendor/
    ###< symfony/framework-bundle ###

Ці кумедні рядки — це маркери, додані Symfony Flex, щоб визначити, що потрібно видалити, якщо ви вирішите видалити залежність. Я ж казав, що всю нудну роботу робить Symfony, а не ви.

Було б непогано розмістити репозиторій на віддаленому сервері. GitHub, GitLab чи Bitbucket — хороший вибір.

.. note::

    Якщо ви розгортаєте у Platform.sh, у вас уже є копія Git-репозиторія, оскільки Platform.sh використовує Git за лаштунками, коли ви використовуєте ``cloud:deploy``. Але вам не варто покладатися на Git-репозиторій Platform.sh. Він призначений лише для розгортання. Це не резервна копія.

Безперервне розгортання в продакшн
-----------------------------------------------------------------

.. index::
    single: Symfony CLI;cloud:deploy

Ще однією гарною звичкою є регулярне розгортання. Розгортання після кожного кроку — це гарний темп:

.. code-block:: terminal
    :class: ignore

    $ symfony cloud:deploy
